[TASK] Add missing CSS fix to avoid jumping content with new page module

--- a/Resources/Public/Backend/Css/Skin/t3skin_override.css
+++ b/Resources/Public/Backend/Css/Skin/t3skin_override.css
@@ -35,3 +35,20 @@
   -webkit-box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.15);
 }
+
+.t3-page-ce-dropzone-available.active {
+  height: 27px;
+}
+
+.t3-page-ce-dropzone-possible {
+  margin: 0px 10px;
+  z-index: 500;
+  position: relative;
+  opacity: 0.65;
+  filter: alpha(opacity=65);
+}
+
+.t3-page-ce-sortable-helper {
+  padding: 37px 0px 0px 0px;
+  margin: -37px 0px 0px 0px;
+}
